--- a/etc/telegram.conf
+++ b/etc/telegram.conf
@@ -6,5 +6,5 @@ stop on shutdown
 
 script
 cd /home/yperez/develop/telegram-bot/
-su - yperez -c launch.sh > /dev/null
+su - yperez -c ./launch.sh > /dev/null
 end script
