--- a/etc/telegram.conf
+++ b/etc/telegram.conf
@@ -5,6 +5,5 @@ start on runlevel [2345]
 stop on shutdown
 
 script
-cd /home/yperez/develop/telegram-bot/
-su - yperez -c ./launch.sh > /dev/null
+su - yperez -c "cd /home/yperez/develop/telegram-bot/ && screen ./launch.sh"
 end script
