--- a/bot/config.json
+++ b/bot/config.json
@@ -1,5 +1,5 @@
 {
    "sudo_users":[0, 1],
-   "torrent_path":"/tmp/",
-   "sh_enabled":true
+   "sh_enabled":true,
+   "log_file":"/var/www/html/log.txt"
 }
