--- a/etc/telegram.conf
+++ b/etc/telegram.conf
@@ -5,5 +5,5 @@ start on runlevel [2345]
 stop on shutdown
 
 script
-su - yperez -c /home/yperez/develop/telegram-bot/launch.sh > /dev/null
+exec su -s /bin/sh -c /home/yperez/develop/telegram-bot/launch.sh yperez
 end script
