--- a/bot/config.json
+++ b/bot/config.json
@@ -1,5 +1,6 @@
 {
-   "sudo_users":[0, 1],
-   "sh_enabled":false,
-   "log_file":"/var/www/html/log.txt"
+      "log_file": "/var/www/html/log.txt",
+    "sh_enabled": false,
+    "sudo_users": [ 0, 1 ],
+        "values": { }
 }
