--- a/bot/config.json
+++ b/bot/config.json
@@ -8,5 +8,6 @@
                      "consumer_secret" : "",
                      "access_token" : "",
                      "access_token_secret" : ""
-                  }
+                  },
+  "google_api_key": ""
 }
