--- a/bot/config.json
+++ b/bot/config.json
@@ -1,13 +1,13 @@
 {
-      "log_file": "/var/www/html/log.txt",
-    "sh_enabled": false,
-    "sudo_users": [ 0, 1 ],
-        "values": { },
-       "twitter": {
-                     "consumer_key" : "",
-                     "consumer_secret" : "",
-                     "access_token" : "",
-                     "access_token_secret" : ""
-                  },
-  "google_api_key": ""
+    "google_api_key": "",
+          "log_file": "/var/www/html/log.txt",
+        "sh_enabled": false,
+        "sudo_users": [ 0, 1 ],
+           "twitter": {
+                                 "access_token": "",
+                          "access_token_secret": "",
+                                 "consumer_key": "",
+                              "consumer_secret": ""
+                      },
+            "values": { }
 }
