--- a/etc/telegram.conf
+++ b/etc/telegram.conf
@@ -6,4 +6,4 @@ respawn limit 15 5
 start on runlevel [2345]
 stop on shutdown
 
-exec su - yourusername -c"/bin/sh telegrambotpath/launch.sh"
+exec su - yourusername; /bin/sh telegrambotpath/launch.sh
