--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: erlang
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq libreadline-dev libconfig-dev libssl-dev lua5.2 liblua5.2-dev libevent-dev make unzip git libjansson-dev libpython-dev
-  - ./launch.sh install
+  - sudo apt-get install -qq libreadline-dev libconfig-dev libssl-dev lua5.2 liblua5.2-dev libevent-dev make unzip git libjansson-dev libpython2.7-dev
   - ./launch.sh update
 
 script: 
