--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ language: erlang
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq libreadline-dev libconfig-dev libssl-dev lua5.2 liblua5.2-dev libevent-dev make unzip git libjansson-dev python2.7-dev
-  - ./launch.sh update
+  - ./launch.sh install
+  - ./launch.sh
 
 script: 
   - luac -p bot/*.lua
