--- a/etc/telegram.conf
+++ b/etc/telegram.conf
@@ -7,4 +7,4 @@ start on runlevel [2345]
 stop on shutdown
 
 setuid yourusername
-exec /bin/sh telegrambotpath/launch.sh
+exec /bin/sh merbotpath/merbot
